   * abilities can receive time of day and terrain [filter]
     - ambush and nightstalk are available via the new [hides] ability tag
   * added a optional random_leader= tag inside a [multiplayer_side] to
     specify a different list of randomly selectable leaders
   * added level as a possible argument for standard unit [filter]
 * music:
   * support for more than one music file per scenario with adjustable spacing
 * Miscellaneous
   * added a require_amla element to [advancement] tags.
   * anonymous data logging for single player campaigns, see stats.wesnoth.org
   * zipios++ can now be disabled by passing --without-zipios to configure
   * functions to easily create one frame animations, for deprecated images
   * improved (underwater) merfolk village
   * (internal) make attack animations work like all other animations
   * backport latest SDL_ttf change, fix ascender/descender issue for DejaVu
   * fix crash when using zoom keys in the main lobby
   * new utils: codecomp codeextract codeglyphs codelist, for font analysis
   * login names in MP is now limited to 18 characters
   * added {RANDOM_SIDE} and {DEFAULT_SCHEDULE} macros

Version 1.1:
 * campaign server
   * support new "timestamp" attribute
   * save persistent attributes in the campaign data
     * "name" is treated as directory name, so use campaign_name (#4525)
     * SECURITY: ensure file and directory names on upload match campaign name
   * support filtering on campaign_list requests: name, last update time
     (before or after), language of translation
   * campaign_list response now contains the time the request was processed
   * campaign_list response now contains information about translations
   * fixed problem with duplicate translations being saved with each upload
   * added a passphrase change function
   * deleting campaigns, campaign file is now deleted, not reduced to zero size
 * campaigns:
   * Eastern Invasion