@@ -88,7 +88,6 @@ symbol_image=sand
 id=sand
 name= _ "Sand"
 char=d
-light=true
 [/terrain]
 
 #New desert
@@ -97,7 +96,6 @@ symbol_image=desert
 id=desert
 name= _ "Desert"
 char=I
-light=true
 aliasof=d
 [/terrain]
 
@@ -193,7 +191,6 @@ char=B
 aliasof=tI
 heals=true
 gives_income=true
-light=true
 [/terrain]
 
 [terrain]
@@ -204,7 +201,6 @@ char=U
 aliasof=tI
 heals=true
 gives_income=true
-light=true
 [/terrain]
 
 [terrain]
@@ -215,7 +211,6 @@ char=P
 aliasof=I
 heals=true
 #gives_income=true
-light=true
 [/terrain]
 
 [terrain]
@@ -226,7 +221,6 @@ char=L
 aliasof=tG
 heals=true
 gives_income=true
-light=true
 [/terrain]
 
 [terrain]
@@ -244,11 +238,9 @@ symbol_image=village-human-snow-hills-tile
 id=snow-hill_village
 name= _ "Village"
 char=A
-light=true
 aliasof=th
 heals=true
 gives_income=true
-light=true
 [/terrain]
 
 [terrain]
@@ -267,7 +259,6 @@ id=snow_village
 name= _ "Snow Village"
 char=V
 aliasof=tS
-light=true
 heals=true
 gives_income=true
 [/terrain]
@@ -308,7 +299,6 @@ symbol_image=snow
 id=tundra
 name= _ "Snow"
 char=S
-light=true
 [/terrain]
 
 [terrain]
@@ -318,7 +308,6 @@ name= _ "Ice"
 char=i
 unit_height_adjust=-2
 aliasof=S
-light=true
 [/terrain]
 
 [terrain]
@@ -340,7 +329,6 @@ aliasof=h
 symbol_image=snow-hills
 id=snow_hills
 name= _ "Snow Hills"
-light=true
 char=H
 aliasof=h
 [/terrain]
@@ -394,7 +382,6 @@ char=T
 [terrain]
 symbol_image=snow-forest-tile
 id=snow_forest
-light=true
 name= _ "Snow Forest"
 aliasof=f
 char=F
@@ -412,7 +399,6 @@ symbol_image=cavewall
 id=cavewall
 name= _ "Cave Wall"
 char=W
-light=true
 [/terrain]
 
 [terrain]
@@ -468,7 +454,6 @@ name= _ "Keep"
 char=K
 unit_height_adjust=8
 aliasof=C
-light=true
 recruit_from=true
 recruit_onto=true
 [/terrain]
